Remove readApartmentFromJson